@startuml
title Class Diagram: Revenue Statistics (UC29)

' Controller
class DashboardController {
    - dashboardService : DashboardService
    + getDashboard() : ResponseEntity<DashboardResponseDTO>
}

class ReportController {
    - revenueService : RevenueService
    - reportExportService : ReportExportService
    + getRevenueReport(startDate: Date, endDate: Date) : ResponseEntity<RevenueReportDTO>
    + exportRevenueReport(startDate: Date, endDate: Date, format: String) : ResponseEntity<byte[]>
}

' Service
interface DashboardService <<interface>> {
    + getDashboardData() : DashboardResponseDTO
}

interface RevenueService <<interface>> {
    + getDetailedRevenueReport(startDate: Date, endDate: Date) : RevenueReportDTO
}

interface ReportExportService <<interface>> {
    + exportRevenueReport(startDate: Date, endDate: Date, format: String) : byte[]
}

class RevenueServiceImpl {
    - orderRepository : OrderRepository
    + getDetailedRevenueReport(startDate: Date, endDate: Date) : RevenueReportDTO
}

class DashboardServiceImpl {
    - orderRepository : OrderRepository
    - productRepository : ProductRepository
    - userRepository : UserRepository
    + getDashboardData() : DashboardResponseDTO
}

class ReportExportServiceImpl {
    - revenueService : RevenueService
    + exportRevenueReport(startDate: Date, endDate: Date, format: String) : byte[]
}

' Repository
interface OrderRepository <<interface>> {
    + calculateTotalRevenue(startDate: Date, endDate: Date) : Double
    + countOrders(startDate: Date, endDate: Date) : int
    + findByOrderDateBetween(startDate: Date, endDate: Date) : List<Order>
}

interface ProductRepository <<interface>> {
    + count() : long
}

interface UserRepository <<interface>> {
    + count() : long
}

' DTO
class RevenueReportDTO {
    - onlineRevenue : Double
    - offlineRevenue : Double
    - totalOrders : int
    - revenueByDay : Map<String, Double>
    - orders : List<OrderSummaryResponseDTO>
}

class DashboardResponseDTO {
    - totalRevenue : Double
    - totalOrders : int
    - totalProducts : int
    - totalCustomers : int
    - recentOrders : List<OrderSummaryResponseDTO>
}

class OrderSummaryResponseDTO {
    - orderId : Long
    - orderDate : Date
    - totalAmount : Double
    - status : OrderStatus
}

' Entity
class Order {
    - id : Long
    - orderDate : Date
    - totalAmount : Double
    - type : OrderType
    - status : OrderStatus
}

class Product {
    - id : Long
}

class User {
    - id : Long
}

' Relationships
DashboardServiceImpl ..|> DashboardService
RevenueServiceImpl ..|> RevenueService
ReportExportServiceImpl ..|> ReportExportService

' Dependency Injection
DashboardController --> DashboardService : - dashboardService
ReportController --> RevenueService : - revenueService
ReportController --> ReportExportService : - reportExportService

DashboardServiceImpl --> OrderRepository : - orderRepository
DashboardServiceImpl --> ProductRepository : - productRepository
DashboardServiceImpl --> UserRepository : - userRepository

RevenueServiceImpl --> OrderRepository : - orderRepository
ReportExportServiceImpl --> RevenueService : - revenueService

@enduml